# IMF-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
src/app/: config.py  database.py  main.py  models.py  schemas.py
src/app/routers/: document_router.py
src/app/services/: document_service.py
streamlit/: streamlit_app.py
